appId: com.lsimaocosta.calculadorapricesac
---
- runFlow: helpers/launch_dev_client.yaml
- tapOn:
    id: 'tab-calculator'
- scrollUntilVisible:
    element:
      id: 'section-parameters'
    centerElement: true
    visibilityPercentage: 10
- scrollUntilVisible:
    element:
      id: 'input-principal'
    centerElement: true
    visibilityPercentage: 10
- tapOn:
    id: 'input-principal'
- eraseText
- inputText: '250000'
- hideKeyboard
- scrollUntilVisible:
    element:
      id: 'input-rate'
    centerElement: true
    visibilityPercentage: 10
- tapOn:
    id: 'input-rate'
- eraseText
- inputText: '1,1'
- hideKeyboard
- scrollUntilVisible:
    element:
      id: 'input-term'
    centerElement: true
    visibilityPercentage: 10
- tapOn:
    id: 'input-term'
- eraseText
- inputText: '240'
- hideKeyboard
- scrollUntilVisible:
    element:
      id: 'input-due-day'
    centerElement: true
    visibilityPercentage: 10
- tapOn:
    id: 'input-due-day'
- eraseText
- inputText: '10'
- hideKeyboard
- scrollUntilVisible:
    element:
      id: 'section-summary'
    centerElement: false
    visibilityPercentage: 10
    timeout: 30000
    waitToSettleTimeoutMs: 1000
- assertVisible:
    id: 'section-summary'
- scrollUntilVisible:
    element:
      id: 'chart-payment-composition'
    centerElement: false
    visibilityPercentage: 10
    timeout: 30000
    waitToSettleTimeoutMs: 1000
- assertVisible:
    id: 'chart-payment-composition'
